--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
   <div ng-controller="MyCtrl">
     <div class="main">
       <h2>Search for new released movies:</h2>
-      <autocomplete ng-model="result" attr-name="test-name" attr-placeholder="type to search movies..." click-activation="true" data="movies" on-type="doSomething" on-select="doSomethingElse"></autocomplete>
+      <form name="form">
+        <autocomplete ng-model="result" attr-name="test-name" attr-required="true" attr-placeholder="type to search movies..." click-activation="true" data="movies" on-type="doSomething" on-select="doSomethingElse"></autocomplete>
+        <button type="submit">Submit</button>
+      </form>
       <br>
       <div class="description">
         This is a simple autocomplete directive for AngularJS, packaged in a Angular module. You can check out the source code or download it here:
