--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="main">
       <h2>Search for new released movies:</h2>
       <form name="form">
-        <autocomplete ng-model="result" attr-name="test-name" attr-required="true" attr-placeholder="type to search movies..." click-activation="true" data="movies" on-type="doSomething" on-select="doSomethingElse"></autocomplete>
+        <autocomplete ng-model="result" attr-name="test-name" attr-placeholder="type to search movies..." click-activation="true" data="movies" on-type="doSomething" on-select="doSomethingElse"></autocomplete>
         <button type="submit">Submit</button>
       </form>
       <br>
